deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wize-comment-service
  namespace: wizeworks
  labels:
    app: wize-comment
spec:
  selector:
    app: wize-comment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
